[package]
name = "hero-runtime"
version = "0.0.1"
description = "Hero is a Polkadot parachain on which can deploy solidity smart contracts."
authors = ["PAID Network DevHub <https://github.com/PAIDNetwork>"]
homepage = "https://paidnetwork.com/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/PAIDNetwork/hero"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
hex-literal = { version = "0.3.4", optional = true }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
serde = { version = "1.0.137", optional = true, features = ["derive"] }
smallvec = "1.6.1"

# Local Dependencies
pallet-crowdloan-rewards = 	{ path = "../pallets/crowdloan-rewards", default-features = false }
pallet-erc721 = 			{ path = "../pallets/erc721",            default-features = false }
pallet-feeless = 			{ path = "../pallets/feeless",           default-features = false }
pallet-smart-agreement = 	{ path = "../pallets/smart_agreement",   default-features = false }

# Substrate FRAME Dependencies
frame-benchmarking =           { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23", optional = true }
frame-executive =              { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
frame-support =                { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
frame-system =                 { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
frame-system-benchmarking =    { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23", optional = true }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
frame-try-runtime =            { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23", optional = true }

# Substrate Pallet Dependencies
pallet-aura =                                { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
pallet-authorship =                          { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
pallet-balances =                            { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
pallet-session =                             { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
pallet-sudo =                                { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
pallet-timestamp =                           { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
pallet-transaction-payment =                 { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
pallet-democracy =                           { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
pallet-collective =                          { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
pallet-scheduler =                           { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
pallet-treasury =                            { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }


# Substrate SP Dependencies
sp-api =              { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
sp-block-builder =    { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
sp-consensus-aura =   { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
sp-core =             { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
sp-inherents =        { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
sp-io =               { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
sp-offchain =         { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
sp-runtime =          { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
sp-session =          { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
sp-std =              { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
sp-version =          { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }

# Polkadot Dependencies
pallet-xcm =              { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.23" }
polkadot-parachain =      { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.23" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.23" }
xcm =                     { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.23" }
xcm-builder =             { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.23" }
xcm-executor =            { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.23" }

# Cumulus Dependencies
cumulus-pallet-aura-ext =             { git = "https://github.com/paritytech/cumulus", default-features = false,  branch = "polkadot-v0.9.23" }
cumulus-pallet-dmp-queue =            { git = "https://github.com/paritytech/cumulus", default-features = false,  branch = "polkadot-v0.9.23" }
cumulus-pallet-parachain-system =     { git = "https://github.com/paritytech/cumulus", default-features = false,  branch = "polkadot-v0.9.23" }
cumulus-pallet-session-benchmarking = { git = "https://github.com/paritytech/cumulus", default-features = false,  branch = "polkadot-v0.9.23", version ="3.0.0" }
cumulus-pallet-xcm =                  { git = "https://github.com/paritytech/cumulus", default-features = false,  branch = "polkadot-v0.9.23" }
cumulus-pallet-xcmp-queue =           { git = "https://github.com/paritytech/cumulus", default-features = false,  branch = "polkadot-v0.9.23" }
cumulus-primitives-core =             { git = "https://github.com/paritytech/cumulus", default-features = false,  branch = "polkadot-v0.9.23" }
cumulus-primitives-timestamp =        { git = "https://github.com/paritytech/cumulus", default-features = false,  branch = "polkadot-v0.9.23" }
cumulus-primitives-utility =          { git = "https://github.com/paritytech/cumulus", default-features = false,  branch = "polkadot-v0.9.23" }
pallet-collator-selection =           { git = "https://github.com/paritytech/cumulus", default-features = false,  branch = "polkadot-v0.9.23" }
parachain-info =                      { git = "https://github.com/paritytech/cumulus", default-features = false,  branch = "polkadot-v0.9.23" }

# Frontier
pallet-evm =                     { git = "https://github.com/paritytech/frontier", default-features = false, branch = "master" }
pallet-evm-precompile-simple =   { git = "https://github.com/paritytech/frontier", default-features = false, branch = "master" }
pallet-evm-precompile-sha3fips = { git = "https://github.com/paritytech/frontier", default-features = false, branch = "master" }
pallet-evm-precompile-modexp =   { git = "https://github.com/paritytech/frontier", default-features = false, branch = "master" }
pallet-ethereum =                { git = "https://github.com/paritytech/frontier", default-features = false, branch = "master" }
fp-self-contained =              { git = "https://github.com/paritytech/frontier", default-features = false, branch = "master" }
fp-rpc =                         { git = "https://github.com/paritytech/frontier", default-features = false, branch = "master" }

[features]
default = [
	"std",
]
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"serde",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"cumulus-pallet-dmp-queue/std",
	"fp-self-contained/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-democracy/std",
	"pallet-collective/std",
	"pallet-scheduler/std",
	"pallet-treasury/std",
	"pallet-collator-selection/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-crowdloan-rewards/std",
	"pallet-erc721/std",
	"pallet-evm/std",
	"pallet-ethereum/std",
	"pallet-smart-agreement/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-xcm/std",
	"parachain-info/std",
	"polkadot-parachain/std",
	"polkadot-runtime-common/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
]

runtime-benchmarks = [
	"hex-literal",
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
	"pallet-crowdloan-rewards/runtime-benchmarks",
	"pallet-erc721/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	'pallet-collective/runtime-benchmarks',
	"pallet-evm/runtime-benchmarks",
	"pallet-ethereum/runtime-benchmarks",
	"pallet-smart-agreement/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
]

try-runtime = [
	"frame-executive/try-runtime",
	"frame-try-runtime",
]
