[package]
name = "pallet-crowdloan-rewards"
authors = ["Anonymous"]
description = "Reward citizens who participated in a crowdloan to acquire a parachain slot on the backing relay chain."
version = "0.6.0"
license = "Unlicense"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
edition = "2021"

[dependencies]
parity-scale-codec = { version = "3.0.0", default-features = false}
serde = { version = "1.0.137", optional = true, features = ["derive"], default-features = false }
log = { version = "0.4", default-features = false }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }

frame-support =      { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
frame-system =       { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
sp-core =            { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
sp-runtime =         { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
sp-std =             { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
sp-io =              { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
pallet-balances =    { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
pallet-utility =     { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23", optional = true }
sp-trie =            { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.23", optional = true }
ed25519-dalek =      { version = "1.0.1", default-features = false, features = ["u64_backend", "alloc"], optional = true }

cumulus-primitives-core =               { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.23", optional = true }
cumulus-pallet-parachain-system =       { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.23", optional = true }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.23", optional = true }

[dev-dependencies]
cumulus-test-relay-sproof-builder = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.23" }

[features]
default = ["std"]
std = [
    "pallet-balances/std",
    "parity-scale-codec/std",
    "pallet-utility/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-runtime/std",
    "serde",
    "log/std",
    "sp-std/std",
    "sp-io/std",
    "cumulus-pallet-parachain-system/std",
    "cumulus-primitives-core/std",
    "cumulus-primitives-parachain-inherent/std",
    "scale-info/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "sp-trie",
    "ed25519-dalek",
    "cumulus-primitives-core",
    "cumulus-pallet-parachain-system",
    "cumulus-primitives-parachain-inherent",
]
