[package]
name = "pallet-feeless"
authors = [ "Pankaj Chaudhary" ]
description = "pallet to perform feeless transaction."
version = "0.0.1"
license = "Unlicense"
homepage = "https://paidnetwork.com"
edition = "2021"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.1.2", default-features = false, features = [
	"derive",
] }
serde = { version = "1.0.137", optional = true }

pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27", package = "pallet-balances" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27", optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27" }

[dev-dependencies]

sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27" }

[features]
default = [ "std" ]
runtime-benchmarks = [ "frame-benchmarking/runtime-benchmarks" ]
std = [
	"pallet-balances/std",
	"codec/std",
	"scale-info/std",
	"serde",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
]
try-runtime = [ "frame-support/try-runtime" ]