[package]
name = 'paid-chain-test-client'
version = '0.0.1'
authors = ['PAID Network DevHub <https://github.com/PAIDNetwork>']
description = 'Paid Chain is a substrate chain which we can deploy the solidity smart contracts.'
edition = '2018'
license = 'Unlicense'
publish = false

[dependencies.codec]
package = 'parity-scale-codec'

[dependencies.paid-chain-runtime]
path = '../../runtime'

[dependencies.sc-client-api]
branch = 'frontier'
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-consensus]
branch = 'frontier'
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-executor]
branch = 'frontier'
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-api]
branch = 'frontier'
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-runtime]
branch = 'frontier'
git = 'https://github.com/paritytech/substrate.git'

[dependencies.substrate-test-client]
branch = 'frontier'
git = 'https://github.com/paritytech/substrate.git'
