[package]
name = 'hero-test-client'
version = '0.0.1'
authors = ['PAID Network DevHub <https://github.com/PAIDNetwork>']
description = 'Hero is a Polkadot parachain on which we can deploy the solidity smart contracts.'
edition = '2018'
license = 'Unlicense'
publish = false

[dependencies.codec]
package = 'parity-scale-codec'

[dependencies.hero-runtime]
path = '../../runtime'

[dependencies.sc-client-api]
branch = 'frontier'
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-consensus]
branch = 'frontier'
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-executor]
branch = 'frontier'
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-api]
branch = 'frontier'
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-runtime]
branch = 'frontier'
git = 'https://github.com/paritytech/substrate.git'

[dependencies.substrate-test-client]
branch = 'frontier'
git = 'https://github.com/paritytech/substrate.git'
